# autosuggest-core

./: .gitignore  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  INTEGRATING.md  PRODUCT.md  README.md  ROADMAP.md  SCHEMA.md  TECH.md  deny.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/benches/: complete.rs
crates/core/src/: complete.rs  correct.rs  fs_source.rs  generator_runner.rs  history.rs  lib.rs  parse.rs  rank.rs  tokenize.rs
crates/core/src/correct/: levenshtein.rs  mod.rs  native.rs  resolver.rs  rule.rs
crates/core/src/types/: mod.rs  string_list.rs  suggestion.rs
crates/core/tests/: autosuggest.rs  golden_complete.rs  golden_correct.rs  specs.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  load.rs  main.rs
crates/daemon/tests/: stdio.rs
crates/data/: Cargo.toml
crates/data/benches/: generator.rs
crates/data/src/: cache.rs  lib.rs  parse.rs  runner.rs
crates/ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ffi/include/: autosuggest.h
crates/ffi/src/: lib.rs
crates/ffi/tests/: ffi.rs
crates/history-store/: Cargo.toml
crates/history-store/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: history.rs  lib.rs  request.rs  response.rs
crates/protocol/tests/: golden.rs
crates/protocol/tests/support/: harness.rs
rules/: brew_cask.rule.json  cd_not_dir.rule.json  cp_dir.rule.json  docker_compose_deprecated.rule.json  grep_r.rule.json  mkdir_p.rule.json  mv_dir.rule.json  no_command.rule.json  pip_install_typo.rule.json  rm_dir.rule.json  scp_dir.rule.json  ssh_port_colon.rule.json  subcommand_typo.rule.json  sudo.rule.json  tar_gz.rule.json
specs/: apt.spec.json  awk.spec.json  aws.spec.json  brew.spec.json  cargo.spec.json  cat.spec.json  cd.spec.json  chmod.spec.json  chown.spec.json  claude.spec.json  cmake.spec.json  codesign.spec.json  codex.spec.json  column.spec.json  cp.spec.json  crontab.spec.json  curl.spec.json  cut.spec.json  date.spec.json  defaults.spec.json  df.spec.json  diskpart.spec.json  diskutil.spec.json  docker.spec.json  dotnet.spec.json  dpkg.spec.json  du.spec.json  echo.spec.json  env.spec.json  export.spec.json  find.spec.json  findstr.spec.json  gh.spec.json  git.spec.json  go.spec.json  grep.spec.json  gunzip.spec.json  gzip.spec.json  head.spec.json  ipconfig.spec.json  (+71 more)
tests/fixtures/autosuggest/cwd_weighting/: expected.json  request.json
tests/fixtures/autosuggest/dedupe_recent/: expected.json  request.json
tests/fixtures/autosuggest/empty_prefix_most_recent/: expected.json  request.json
tests/fixtures/autosuggest/git_push_recorded/: expected.json  request.json
tests/fixtures/autosuggest/no_match_null/: expected.json  request.json
tests/fixtures/autosuggest/ts_ordering/: expected.json  request.json
tests/fixtures/complete/apt/: expected.json  request.json
tests/fixtures/complete/cat/: expected.json  request.json
tests/fixtures/complete/cd/: expected.json  request.json
tests/fixtures/complete/cp/: expected.json  request.json
tests/fixtures/complete/cp_exclusive/: expected.json  request.json
tests/fixtures/complete/git/: expected.json  request.json
tests/fixtures/complete/grep/: expected.json  request.json
tests/fixtures/complete/kill_suggestions/: expected.json  request.json
tests/fixtures/complete/ls/: expected.json  request.json
tests/fixtures/complete/ls_depends/: expected.json  request.json
tests/fixtures/complete/ls_separator/: expected.json  request.json
tests/fixtures/complete/mkdir/: expected.json  request.json
tests/fixtures/complete/mv/: expected.json  request.json
tests/fixtures/complete/rm/: expected.json  request.json
tests/fixtures/correct/apt_install_typo/: expected.json  path.json  request.json
tests/fixtures/correct/brew_cask/: expected.json  request.json
tests/fixtures/correct/cd_not_dir/: expected.json  request.json
tests/fixtures/correct/docker_compose_deprecated/: expected.json  path.json  request.json
tests/fixtures/correct/mkdir_p/: expected.json  request.json
tests/fixtures/correct/no_command/: expected.json  path.json  request.json
tests/fixtures/correct/pip_install_typo/: expected.json  request.json
tests/fixtures/correct/subcommand_typo/: expected.json  path.json  request.json
tests/fixtures/correct/sudo_prefix/: expected.json  request.json
tests/fixtures/correct/tar_gz/: expected.json  request.json
tests/fixtures/harness_smoke/: expected.json
