[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/protocol",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/autosuggest-core/autosuggest-core"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
