[package]
name = "autosuggest-core"
version = "1.1.0"
description = "Pure completion, autosuggestion, and correction engine for terminals."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "autosuggest_core"
path = "src/lib.rs"

[features]
# Real, read-only `$PATH` scanner (`correct::PathCommandResolver`). Enabled by
# default for convenient embedding; the pure engine paths never require it and
# always take an injected `CommandResolver`. See `correct::resolver` docs.
default = ["std-resolver"]
std-resolver = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# Reuse the canonical history/protocol models so the engine and the wire format
# never drift (TECH.md §2; CONTRIBUTING "prefer reusing protocol types").
autosuggest-protocol = { path = "../protocol" }
regex = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "complete"
harness = false
